--- a/Proyecto_1_EDA.ipynb
+++ b/Proyecto_1_EDA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "                            PROYECTO INDIVIDUAL: EDA MACHINE LEARNING SISTEMA DE RECOMDACION "
+    "                            PROYECTO INDIVIDUAL: EDA MACHINE LEARNING 
    ]
   },
   {
